--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -219,6 +219,17 @@ a:hover {
   box-shadow: 0 0 0 3px #0078ff;
   transition: all 500ms ease;
 }
+.ico-circle:hover {
+  background-color:rgba(220, 220, 220, 0.5);
+  color: #fff;
+  box-shadow: 0 0 0 3px #cde1f8;
+  transition: all 500ms ease;
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+
+}
 
 .socials .ico-circle:hover {
   background-color: #0078ff;
