--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -7,7 +7,6 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
     <!-- Favicons -->
-
     <link href="{{asset("assets/img/favicon.png")}}" rel="icon">
     <link href="{{asset("assets/img/apple-touch-icon.png")}}" rel="apple-touch-icon">
     <!-- Bootstrap CSS File -->
@@ -20,9 +19,6 @@
     <link href="{{asset("assets/lib/lightbox/css/lightbox.min.css")}}" rel="stylesheet">
     <!-- Main Stylesheet File -->
     <link href=" {{asset("assets/css/style.css")}}" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/default-skin/default-skin.min.css">
 </head>
 
 <body id="page-top">
@@ -43,18 +39,17 @@
             {% if app.user %}
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll active" href="{{ path('home') }}">Accueil</a>
+                    <a class="nav-link js-scroll active" href="{{ path('home') }}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="{{ path('mespublication') }}"> Mes  publications</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll" href="#contact">Contact</a>
-
                     <a class="nav-link js-scroll" href="{{path('contact')}}">Contact</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="{{ path('calcul') }}">Statistique</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('modifiercompte') }}">Compte</a>
@@ -62,17 +57,18 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('app_logout') }}">déconnexion</a>
                 </li>
+
             </ul>
             {% else %}
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll active" href="{{ path('home') }}">Accueil</a>
+                    <a class="nav-link js-scroll active" href="{{ path('home') }}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="{{ path('mespublication') }}"> Mes  publications</a>
+                    <a class="nav-link js-scroll" href="{{ path('calcul') }}">Statistique</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('app_register') }}">Inscription</a>
@@ -80,9 +76,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('app_login') }}">connexion</a>
                 </li>
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link js-scroll" href="#contact">Contact</a>#}
-{#                </li>#}
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="#contact">Contact</a>
+                </li>
             </ul>
             {% endif %}
         </div>
@@ -103,6 +99,9 @@
 <script src="{{ asset("assets/lib/lightbox/js/lightbox.min.js") }}"></script>
 <script src="{{ asset("assets/lib/typed/typed.min.js") }}"></script>
 <!-- Contact Form JavaScript File -->
+
+
+
 <!-- Template Main Javascript File -->
 
 <script src="{{ asset("assets/js/main.js") }}"></script>
